filter 관련 미지원 브라우저 표시(사파리)

--- a/index.html
+++ b/index.html
@@ -1690,7 +1690,7 @@
                   <header> <h4 class="m-0">Jitters</h4> </header>
                   
                   <div>
-                    <div class="form-label mb-0"><i class="bi bi-palette"></i> HueJitter</div>
+                    <div class="form-label mb-0"><i class="bi bi-palette"></i> HueJitter (Not supported <i class="bi bi-browser-safari"></i>)</div>
                     <div class="input-group ui-input-stepper">
                       <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                       <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" >
@@ -1700,7 +1700,7 @@
                     </div>
                   </div>
                   <div>
-                    <div class="form-label mb-0"><i class="bi bi-brightness-alt-high"></i> SaturationJitter</div>
+                    <div class="form-label mb-0"><i class="bi bi-brightness-alt-high"></i> SaturationJitter (Not supported <i class="bi bi-browser-safari"></i>)</div>
                     <div class="input-group ui-input-stepper">
                       <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                       <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" >
@@ -1710,7 +1710,7 @@
                     </div>
                   </div>
                   <div>
-                    <div class="form-label mb-0"><i class="bi bi-brightness-high"></i> BrightnessJitter</div>
+                    <div class="form-label mb-0"><i class="bi bi-brightness-high"></i> BrightnessJitter (Not supported <i class="bi bi-browser-safari"></i>)</div>
                     <div class="input-group ui-input-stepper">
                       <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                       <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" >
