업로드 이슈 해결

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <script src="/WG2/js/Wg2Uploder.js"></script>
   <!-- <script src="http://mins01.com/WG2/js/Wg2Uploder.js"></script> -->
   <script>
-    if(globalThis?.Wg2Uploder??false){
+    if(Wg2Uploder){
       globalThis.Wg2Uploder = Wg2Uploder;
     }
   </script>
