--- a/index.html
+++ b/index.html
@@ -446,9 +446,9 @@
                 </button>
               </div>
               <div class="col-6">
-                <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-save">
+                <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-download">
                   <div class="fs-4"><i class="bi bi-file-earmark-arrow-down"></i></div>
-                  <div>SAVE</div>
+                  <div>DOWNLOAD</div>
                 </button>
               </div>
               <div class="col-6">
@@ -571,16 +571,16 @@
       </div>
     </div>
         
-    <div class="modal fade" id="modal-file-save"  aria-hidden="true">
+    <div class="modal fade" id="modal-file-download"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
           <div class="modal-header">
-            <h2 class="modal-title fs-4"><i class="bi bi-file-earmark-arrow-down"></i> Save</h2>
+            <h2 class="modal-title fs-4"><i class="bi bi-file-earmark-arrow-down"></i> Download</h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
             <div class="d-flex flex-column gap-3 p-1">
-              <form action="" onsubmit="editor.saveDocument(this.type.value,this.filename.value,this.quality.value);return false;">
+              <form action="" onsubmit="editor.downloadDocument(this.type.value,this.filename.value,this.quality.value);return false;">
                 <input type="hidden" name="type" value="png">
                 <div class="d-flex flex-column gap-3">
                   <div class="input-group ">
@@ -605,19 +605,19 @@
                   </div>
                   <div class="d-grid gap-3 " style="grid-template-columns: repeat(2 , 1fr);;">
                     <div>
-                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='png';"> <i class="bi bi-filetype-png"></i> Save .png</button>
+                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='png';"> <i class="bi bi-filetype-png"></i> Download .png</button>
                       <div class="form-text mt-0 mb-0"><i class="bi bi-info-circle"></i> quality를 적용할 수 없습니다.</div>
                     </div>
                     <div>
-                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='jpg';"> <i class="bi bi-filetype-jpg"></i> Save .jpg</button>
+                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='jpg';"> <i class="bi bi-filetype-jpg"></i> Download .jpg</button>
                       <div class="form-text mt-0 mb-0"><i class="bi bi-info-circle"></i> 손실 압축.</div>
                     </div>
                     <div>
-                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='webp';"> <i class="bi bi-image"></i> Save .webp</button>
+                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='webp';"> <i class="bi bi-image"></i> Download .webp</button>
                       <div class="form-text mt-0 mb-0"><i class="bi bi-info-circle"></i> 손실 압축. 브라우저 지원 확인 필요</div>
                     </div>
                     <div>
-                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='wc3.json';"> <i class="bi bi-filetype-json"></i> Save .wc3.json</button>
+                      <button type="submit" class="w-100 btn btn-lg btn-primary" onclick="this.form.type.value='wc3.json';"> <i class="bi bi-filetype-json"></i> Download .wc3.json</button>
                       <div class="form-text mt-0 mb-0"><i class="bi bi-info-circle"></i> 레이어 정보가 같이 저장됩니다.</div>
                     </div>
                   </div>
