--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
               </div>
               <div class="col-6">
                 <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-open">
-                  <div class="fs-4"><i class="bi bi-file-earmark-arrow-up"></i></div>
+                  <div class="fs-4"><i class="bi bi-folder2-open"></i></div>
                   <div>OPEN</div>
                 </button>
               </div>
@@ -533,19 +533,35 @@
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
           <div class="modal-header">
-            <h2 class="modal-title fs-4"><i class="bi bi-file-earmark-arrow-up"></i> OPEN FILE</h2>
+            <h2 class="modal-title fs-4"><i class="bi bi-folder2-open"></i> OPEN FILE</h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <form action="" onsubmit="if(this.openfile.files.length){ editor.loadDocument(this.openfile.files[0]).then((r)=>{console.log('loadDocument 완료'); }); this.reset() }else{ alert('Select a file(*.wc3.json | image file )')}; return false;" >
-              <div class="input-group input-group-lg">
-                <input type="file" class="form-control" name="openfile" accept=".wc3.json,image/*">
-              </div>
-              <div class="form-text text-end"><i class="bi bi-info-circle"></i> image 파일과 .wc3.json 파일이 지원됩니다.</div>
-              <div class="text-end">
-                <button type="submit" class="btn btn-primary" ><i class="bi bi-file-earmark-arrow-up"></i> OPEN</button>
-              </div>
-            </form>
+            <div>
+              <div class="form-label m-0"><i class="bi bi-pc-display"></i>/<i class="bi bi-phone"></i> From device</div>
+              <form action="" onsubmit="if(this.openfile.files.length){ editor.loadDocument(this.openfile.files[0]).then((r)=>{console.log('loadDocument 완료'); }); this.reset() }else{ alert('Select a file(*.wc3.json | image file )')}; return false;" >
+                <div class="input-group input-group-lg">
+                  <input type="file" class="form-control" name="openfile" accept=".wc3.json,image/*">
+                </div>
+                <div class="form-text text-end"><i class="bi bi-info-circle"></i> image 파일과 .wc3.json 파일이 지원됩니다.</div>
+                <div class="text-end">
+                  <button type="submit" class="btn btn-primary" ><i class="bi bi-file-earmark-arrow-up"></i> OPEN</button>
+                </div>
+              </form>
+            </div>
+            <div>
+              <div class="form-label m-0"><i class="bi bi-cloud"></i> From URL</div>
+              <form action="" onsubmit="return false;if(this.openfile.files.length){ editor.loadDocument(this.openfile.files[0]).then((r)=>{console.log('loadDocument 완료'); }); this.reset() }else{ alert('Select a file(*.wc3.json | image file )')}; return false;" >
+                <div class="input-group input-group-lg">
+                  <input type="url" class="form-control" name="openfile" placeholder="https://--">
+                </div>
+                <div class="form-text text-end"><i class="bi bi-info-circle"></i> image 파일과 .wc3.json 파일이 지원됩니다.</div>
+                <div class="form-text text-end"><i class="bi bi-info-circle"></i>개발중</div>
+                <div class="text-end">
+                  <button type="submit" class="btn btn-primary" ><i class="bi bi-file-earmark-arrow-up"></i> OPEN</button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
