brush.saveBrushConfig, brush.loadBrushConfig

--- a/brush.html
+++ b/brush.html
@@ -190,7 +190,7 @@
             <div class="card my-1">
               <div class="card-header">brush</div>
               <div class="card-body" style="background-color: #fff; min-height: 200px;">
-                <canvas class="b1 d-block mx-auto wc-brush" is="wc-brush" width="100" height="100" ></canvas>
+                <canvas class="b1 d-block mx-auto wc-brush" is="wc-brush" data-brush-id="brush0" width="100" height="100" ></canvas>
               </div>
             </div> 
           </div>
