--- a/index.html
+++ b/index.html
@@ -1523,7 +1523,7 @@
           </div>
           <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
-              <canvas id="brush0" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
+              <canvas id="brush0" data-brush-key="brush0" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
             </div>
             <div class="brush-wrap brush-preview-canvas-wrap text-center d-flex justify-content-center align-items-center mx-auto">
               <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="100"></canvas>
@@ -1838,7 +1838,7 @@
           </div>
           <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
-              <canvas id="brush1" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
+              <canvas id="brush1" data-brush-key="brush1" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
             </div>
             <div class="brush-wrap brush-preview-canvas-wrap text-center d-flex justify-content-center align-items-center mx-auto">
               <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="100"></canvas>
@@ -1860,7 +1860,7 @@
           </div>
           <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
-              <canvas id="brush2" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
+              <canvas id="brush2" data-brush-key="brush2" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
             </div>
             <div class="brush-wrap brush-preview-canvas-wrap text-center d-flex justify-content-center align-items-center mx-auto">
               <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="100"></canvas>
@@ -1882,7 +1882,7 @@
           </div>
           <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
-              <canvas id="brush3" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
+              <canvas id="brush3" data-brush-key="brush3" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
             </div>
             <div class="brush-wrap brush-preview-canvas-wrap text-center d-flex justify-content-center align-items-center mx-auto">
               <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="100"></canvas>
@@ -1904,7 +1904,7 @@
           </div>
           <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
-              <canvas id="eraser" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
+              <canvas id="eraser" data-brush-key="eraser" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
             </div>
             <div class="brush-wrap brush-preview-canvas-wrap text-center d-flex justify-content-center align-items-center mx-auto">
               <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="100"></canvas>
