--- a/brush.html
+++ b/brush.html
@@ -190,7 +190,7 @@
             <div class="card my-1">
               <div class="card-header">brush</div>
               <div class="card-body" style="background-color: #fff; min-height: 200px;">
-                <canvas class="b1 d-block mx-auto wc-brush" is="wc-brush" data-brush-id="brush0" width="100" height="100" ></canvas>
+                <canvas class="b1 d-block mx-auto wc-brush" is="wc-brush" data-brush-key="brush0" width="100" height="100" ></canvas>
               </div>
             </div> 
           </div>
@@ -230,7 +230,7 @@
       <div class="card my-1">
         <div class="card-header">BRUSH PROPERTY</div>
         <div class="card-body">
-          <form name="formBrushConfig" class="form-brush-config" action="" oninput="b1.setBrushConfig(Wc.HtmlUtil.formToObject(this));b1.flush(); c1.clear();redraw(); return false" >
+          <form name="formBrushConfig" class="form-brush-config" action="" oninput="const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush(); c1.clear();redraw(); return false" >
             <div class="d-flex flex-column gap-3">
               <div class="div-brush-config grid-auto-fit-260px gap-3">
                 <header> <h4 class="m-0">Basic shape (기본 모양)</h4> </header>                              
