--- a/index.html
+++ b/index.html
@@ -1516,7 +1516,7 @@
 
     <div class="modal modal-xl fade" id="modal-brush-config"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
+        <div class="modal-content brush-config-conteiner">
           <div class="modal-header">
             <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Brush config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -1530,7 +1530,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formBrushConfig" class="form-brush-config" data-brush-key="brush" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.brush.brushConfig" >
+            <form name="formBrushConfig" class="form-brush-config" data-brush-key="brush" action="" oninput="var brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush(); return false" data-wc-sync-form="editor.brush.brushConfig" >
               <div class="d-flex flex-column gap-3">
                 <div class="div-brush-config grid-auto-fit-260px gap-3">
                   <header> <h4 class="m-0">Basic shape (기본 모양)</h4> </header>                              
@@ -1831,7 +1831,7 @@
     </div>
     <div class="modal modal-xl fade" id="modal-brush1-config"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
+        <div class="modal-content brush-config-conteiner">
           <div class="modal-header">
             <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Brush1 config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -1845,7 +1845,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formBrush1Config" class="form-brush-config" data-brush-key="brush1" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.brush1.brushConfig" >
+            <form name="formBrush1Config" class="form-brush-config" data-brush-key="brush1" action="" oninput="var brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush(); return false" data-wc-sync-form="editor.brush1.brushConfig" >
             </form>
           </div>
         </div>
@@ -1853,7 +1853,7 @@
     </div>
     <div class="modal modal-xl fade" id="modal-brush2-config"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
+        <div class="modal-content brush-config-conteiner">
           <div class="modal-header">
             <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Brush2 config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -1867,7 +1867,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formBrush2Config" class="form-brush-config" data-brush-key="brush2" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.brush2.brushConfig" >
+            <form name="formBrush2Config" class="form-brush-config" data-brush-key="brush2" action="" oninput="var brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush(); return false" data-wc-sync-form="editor.brush2.brushConfig" >
             </form>
           </div>
         </div>
@@ -1875,7 +1875,7 @@
     </div>
     <div class="modal modal-xl fade" id="modal-brush3-config"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
+        <div class="modal-content brush-config-conteiner">
           <div class="modal-header">
             <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Brush3 config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -1889,7 +1889,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formBrush3Config" class="form-brush-config"  data-brush-key="brush3" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.brush3.brushConfig" >
+            <form name="formBrush3Config" class="form-brush-config"  data-brush-key="brush3" action="" oninput="var brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush(); return false" data-wc-sync-form="editor.brush3.brushConfig" >
             </form>
           </div>
         </div>
@@ -1897,7 +1897,7 @@
     </div>
     <div class="modal modal-xl fade" id="modal-eraser-config"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
+        <div class="modal-content brush-config-conteiner">
           <div class="modal-header">
             <h2 class="modal-title fs-4"><i class="bi bi-eraser"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Eraser config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -1911,7 +1911,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formEraserConfig" class="form-brush-config"  data-brush-key="eraser" action="" oninput="editor.setBrushConfig(Wc.HtmlUtil.formToObject(this),this.dataset.brushKey); return false" data-wc-sync-form="editor.eraser.brushConfig" >
+            <form name="formEraserConfig" class="form-brush-config"  data-brush-key="eraser" action="" oninput="var brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush(); return false" data-wc-sync-form="editor.eraser.brushConfig" >
             </form>
           </div>
         </div>
