--- a/index.html
+++ b/index.html
@@ -1521,7 +1521,7 @@
             <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Brush config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
+          <div class="modal-body brush-preview border-bottom p-0" style="flex:0 0 auto;">
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
               <canvas id="brush0" data-brush-key="brush0" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
             </div>
@@ -1836,7 +1836,7 @@
             <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Brush1 config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
+          <div class="modal-body brush-preview border-bottom p-0" style="flex:0 0 auto;">
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
               <canvas id="brush1" data-brush-key="brush1" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
             </div>
@@ -1858,7 +1858,7 @@
             <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Brush2 config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
+          <div class="modal-body brush-preview border-bottom p-0" style="flex:0 0 auto;">
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
               <canvas id="brush2" data-brush-key="brush2" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
             </div>
@@ -1880,7 +1880,7 @@
             <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Brush3 config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
+          <div class="modal-body brush-preview border-bottom p-0" style="flex:0 0 auto;">
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
               <canvas id="brush3" data-brush-key="brush3" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
             </div>
@@ -1902,7 +1902,7 @@
             <h2 class="modal-title fs-4"><i class="bi bi-eraser"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Eraser config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body brush-preview border-bottom" style="flex:0 0 auto;">
+          <div class="modal-body brush-preview border-bottom p-0" style="flex:0 0 auto;">
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
               <canvas id="eraser" data-brush-key="eraser" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
             </div>
