--- a/index.html
+++ b/index.html
@@ -1530,7 +1530,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formBrushConfig" class="form-brush-config" data-brush-key="brush" action="" oninput="var brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush(); return false" data-wc-sync-form="editor.brush.brushConfig" >
+            <form name="formBrushConfig" class="form-brush-config" data-brush-key="brush" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false" data-wc-sync-form="editor.brush.brushConfig" >
               <div class="d-flex flex-column gap-3">
                 <div class="div-brush-config grid-auto-fit-260px gap-3">
                   <header> <h4 class="m-0">Basic shape (기본 모양)</h4> </header>                              
@@ -1845,7 +1845,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formBrush1Config" class="form-brush-config" data-brush-key="brush1" action="" oninput="var brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush(); return false" data-wc-sync-form="editor.brush1.brushConfig" >
+            <form name="formBrush1Config" class="form-brush-config" data-brush-key="brush1" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false" data-wc-sync-form="editor.brush1.brushConfig" >
             </form>
           </div>
         </div>
@@ -1867,7 +1867,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formBrush2Config" class="form-brush-config" data-brush-key="brush2" action="" oninput="var brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush(); return false" data-wc-sync-form="editor.brush2.brushConfig" >
+            <form name="formBrush2Config" class="form-brush-config" data-brush-key="brush2" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false" data-wc-sync-form="editor.brush2.brushConfig" >
             </form>
           </div>
         </div>
@@ -1889,7 +1889,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formBrush3Config" class="form-brush-config"  data-brush-key="brush3" action="" oninput="var brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush(); return false" data-wc-sync-form="editor.brush3.brushConfig" >
+            <form name="formBrush3Config" class="form-brush-config"  data-brush-key="brush3" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false" data-wc-sync-form="editor.brush3.brushConfig" >
             </form>
           </div>
         </div>
@@ -1911,7 +1911,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formEraserConfig" class="form-brush-config"  data-brush-key="eraser" action="" oninput="var brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush(); return false" data-wc-sync-form="editor.eraser.brushConfig" >
+            <form name="formEraserConfig" class="form-brush-config"  data-brush-key="eraser" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false" data-wc-sync-form="editor.eraser.brushConfig" >
             </form>
           </div>
         </div>
