--- a/brush.html
+++ b/brush.html
@@ -184,7 +184,7 @@
   
 </head>
 <body>
-  <div class="w-100 h-100 d-flex flex-column brush-config-conteiner" >
+  <div class="w-100 h-100 d-flex flex-column brush-config-container" >
     <div class="sticky-top bg-white">
       <div class="container my-3" >
         <div class="row">
@@ -523,7 +523,7 @@
               </div>
               <hr class="my-1">
               <div class="text-end">
-                <button type="button" class="btn btn-primary btn-reset-config" onclick="{const brush = WcHelper.getBrushCanvas(this); brush.brushConfig.reset(); brush.flush();} wcSyncHandler.sync(this.closest('.brush-config-conteiner'));"><i class="bi bi-arrow-counterclockwise"></i> Reset</button>
+                <button type="button" class="btn btn-primary btn-reset-config" onclick="{const brush = WcHelper.getBrushCanvas(this); brush.brushConfig.reset(); brush.flush();} wcSyncHandler.sync(this.closest('.brush-config-container'));"><i class="bi bi-arrow-counterclockwise"></i> Reset</button>
               </div>
             </div>
           </form>
