--- a/index.html
+++ b/index.html
@@ -1516,7 +1516,7 @@
 
     <div class="modal modal-xl fade" id="modal-brush-config"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content brush-config-conteiner">
+        <div class="modal-content brush-config-container">
           <div class="modal-header">
             <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Brush config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -1530,7 +1530,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formBrushConfig" class="form-brush-config" data-brush-key="brush" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false" data-wc-sync-form="editor.brush.brushConfig" >
+            <form name="formBrushConfig" class="form-brush-config" data-brush-key="brush" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false"  >
               <div class="d-flex flex-column gap-3">
                 <div class="div-brush-config grid-auto-fit-260px gap-3">
                   <header> <h4 class="m-0">Basic shape (기본 모양)</h4> </header>                              
@@ -1831,7 +1831,7 @@
     </div>
     <div class="modal modal-xl fade" id="modal-brush1-config"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content brush-config-conteiner">
+        <div class="modal-content brush-config-container">
           <div class="modal-header">
             <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Brush1 config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -1845,7 +1845,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formBrush1Config" class="form-brush-config" data-brush-key="brush1" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false" data-wc-sync-form="editor.brush1.brushConfig" >
+            <form name="formBrush1Config" class="form-brush-config" data-brush-key="brush1" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false"  >
             </form>
           </div>
         </div>
@@ -1853,7 +1853,7 @@
     </div>
     <div class="modal modal-xl fade" id="modal-brush2-config"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content brush-config-conteiner">
+        <div class="modal-content brush-config-container">
           <div class="modal-header">
             <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Brush2 config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -1867,7 +1867,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formBrush2Config" class="form-brush-config" data-brush-key="brush2" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false" data-wc-sync-form="editor.brush2.brushConfig" >
+            <form name="formBrush2Config" class="form-brush-config" data-brush-key="brush2" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false"  >
             </form>
           </div>
         </div>
@@ -1875,7 +1875,7 @@
     </div>
     <div class="modal modal-xl fade" id="modal-brush3-config"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content brush-config-conteiner">
+        <div class="modal-content brush-config-container">
           <div class="modal-header">
             <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Brush3 config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -1889,7 +1889,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formBrush3Config" class="form-brush-config"  data-brush-key="brush3" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false" data-wc-sync-form="editor.brush3.brushConfig" >
+            <form name="formBrush3Config" class="form-brush-config"  data-brush-key="brush3" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false"  >
             </form>
           </div>
         </div>
@@ -1897,7 +1897,7 @@
     </div>
     <div class="modal modal-xl fade" id="modal-eraser-config"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content brush-config-conteiner">
+        <div class="modal-content brush-config-container">
           <div class="modal-header">
             <h2 class="modal-title fs-4"><i class="bi bi-eraser"></i> <i class="bi bi-sliders"></i> <span class="modal-config-title">Eraser config</span></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -1911,7 +1911,7 @@
             </div>
           </div>
           <div class="modal-body brush-config">
-            <form name="formEraserConfig" class="form-brush-config"  data-brush-key="eraser" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false" data-wc-sync-form="editor.eraser.brushConfig" >
+            <form name="formEraserConfig" class="form-brush-config"  data-brush-key="eraser" action="" oninput="{const brush = WcHelper.getBrushCanvas(this); brush.setBrushConfig(Wc.HtmlUtil.formToObject(this)); brush.saveBrushConfig(); brush.flush();} return false"  >
             </form>
           </div>
         </div>
@@ -1925,28 +1925,35 @@
         WcHelper.cloneModalBrushConfigForm(document.formBrushConfig,document.formEraserConfig);
         window.addEventListener('load',(event)=>{
           setTimeout(()=>{
+            const previewAndSyncForm = (brush,isEraser=false)=>{
+              const container = brush.closest('.brush-config-container')
+              WcHelper.syncModalBrushPreviewCanvas(brush,isEraser);
+              const f = container.querySelector('.form-brush-config')
+              Wc.HtmlUtil.objectToForm(brush.brushConfig,f)
+              container.querySelectorAll('.ui-input-stepper input')?.forEach((input)=>{ UiInputStepper.syncDataValue(input); })
+            }
             // 브러시가 draw 하면 미리보기를 다시 그린다.
-            editor.brush.addEventListener('draw',(event)=>{ WcHelper.syncModalBrushPreviewCanvas(event.target); })
-            editor.brush2.addEventListener('draw',(event)=>{ WcHelper.syncModalBrushPreviewCanvas(event.target); })
-            editor.brush3.addEventListener('draw',(event)=>{ WcHelper.syncModalBrushPreviewCanvas(event.target); })
-            editor.eraser.addEventListener('draw',(event)=>{ WcHelper.syncModalBrushPreviewCanvas(event.target,true); })
-            editor.brush.closest('.modal').addEventListener('shown.bs.modal', (event)=>{ setTimeout(()=>{ WcHelper.syncModalBrushPreviewCanvas(editor.brush)},100); })
-            editor.brush2.closest('.modal').addEventListener('shown.bs.modal', (event)=>{ setTimeout(()=>{ WcHelper.syncModalBrushPreviewCanvas(editor.brush2)},100); })
-            editor.brush3.closest('.modal').addEventListener('shown.bs.modal', (event)=>{ setTimeout(()=>{ WcHelper.syncModalBrushPreviewCanvas(editor.brush3)},100); })
-            editor.eraser.closest('.modal').addEventListener('shown.bs.modal', (event)=>{ setTimeout(()=>{ WcHelper.syncModalBrushPreviewCanvas(editor.eraser,true)},100); })
+            editor.brush.addEventListener('draw',(event)=>{ previewAndSyncForm(editor.brush) })
+            editor.brush2.addEventListener('draw',(event)=>{ previewAndSyncForm(editor.brush2) })
+            editor.brush3.addEventListener('draw',(event)=>{ previewAndSyncForm(editor.brush3) })
+            editor.eraser.addEventListener('draw',(event)=>{ previewAndSyncForm(editor.eraser,true) })
+            editor.brush.closest('.modal').addEventListener('shown.bs.modal', (event)=>{ setTimeout(()=>{ previewAndSyncForm(editor.brush) },100); })
+            editor.brush2.closest('.modal').addEventListener('shown.bs.modal', (event)=>{ setTimeout(()=>{ previewAndSyncForm(editor.brush2) },100); })
+            editor.brush3.closest('.modal').addEventListener('shown.bs.modal', (event)=>{ setTimeout(()=>{ previewAndSyncForm(editor.brush3) },100); })
+            editor.eraser.closest('.modal').addEventListener('shown.bs.modal', (event)=>{ setTimeout(()=>{ previewAndSyncForm(editor.eraser,true) },100); })
   
             window.addEventListener('resize', (event)=>{
-              WcHelper.syncModalBrushPreviewCanvas(editor.brush);
-              WcHelper.syncModalBrushPreviewCanvas(editor.brush2);
-              WcHelper.syncModalBrushPreviewCanvas(editor.brush3);
-              WcHelper.syncModalBrushPreviewCanvas(editor.eraser,true);
+              previewAndSyncForm(editor.brush);
+              previewAndSyncForm(editor.brush2);
+              previewAndSyncForm(editor.brush3);
+              previewAndSyncForm(editor.eraser,true);
             })
             
   
-            WcHelper.syncModalBrushPreviewCanvas(editor.brush);
-            WcHelper.syncModalBrushPreviewCanvas(editor.brush2);
-            WcHelper.syncModalBrushPreviewCanvas(editor.brush3);
-            WcHelper.syncModalBrushPreviewCanvas(editor.eraser,true);
+            previewAndSyncForm(editor.brush);
+            previewAndSyncForm(editor.brush2);
+            previewAndSyncForm(editor.brush3);
+            previewAndSyncForm(editor.eraser,true);
           },600)
         })
       }
