BrushConfigurator  기능 추가

--- a/index.html
+++ b/index.html
@@ -1828,8 +1828,16 @@
                   
                 </div>
                 <hr class="my-1">
-                <div class="text-end">
-                  <button type="button" class="btn btn-primary btn-reset-config" onclick="editor.resetBrushConfig(this.form.dataset.brushKey); editor.wcSyncHandler.sync(this.closest('.modal'));"><i class="bi bi-arrow-counterclockwise"></i> Reset</button>
+                <div class="d-flex flex-wrap gap-1 justify-content-end">
+                  <button type="button" class="btn btn-warning btn-reset-config btn-brush-configurator" onclick="Wc.BrushConfigurator.reset(WcHelper.getBrushCanvas(this));"><i class="bi bi-arrow-counterclockwise"></i> Reset</button>
+                  <button type="button" class="btn btn-primary btn-brush-configurator" onclick="Wc.BrushConfigurator.pen(WcHelper.getBrushCanvas(this));"><i class="bi bi-pen"></i> Pen</button>
+                  <button type="button" class="btn btn-primary btn-brush-configurator" onclick="Wc.BrushConfigurator.brush(WcHelper.getBrushCanvas(this));"><i class="bi bi-brush"></i> brush</button>
+                  <button type="button" class="btn btn-info btn-brush-configurator" onclick="Wc.BrushConfigurator.highlighter(WcHelper.getBrushCanvas(this));"><i class="bi bi-highlighter"></i> Highlighter</button>
+                  <button type="button" class="btn btn-info btn-brush-configurator" onclick="Wc.BrushConfigurator.ballpen(WcHelper.getBrushCanvas(this));"><i class="bi bi-pen"></i> Ball Pen</button>
+                  <button type="button" class="btn btn-info btn-brush-configurator" onclick="Wc.BrushConfigurator.pencil(WcHelper.getBrushCanvas(this));"><i class="bi bi-pencil"></i></i> Pencil</button>
+                  <button type="button" class="btn btn-info btn-brush-configurator" onclick="Wc.BrushConfigurator.dipPen(WcHelper.getBrushCanvas(this));"><i class="bi bi-vector-pen"></i> Dip pen</button>
+                  <button type="button" class="btn btn-info btn-brush-configurator" onclick="Wc.BrushConfigurator.inkBrush(WcHelper.getBrushCanvas(this));"><i class="bi bi-brush"></i> Ink Brush</button>
+                  <button type="button" class="btn btn-info btn-brush-configurator" onclick="Wc.BrushConfigurator.airbrush(WcHelper.getBrushCanvas(this));"><i class="bi bi-brush"></i> Air Brush</button>
                 </div>
               </div>
             </form>
