BrushConfigurator  기능 추가

--- a/textLayer.html
+++ b/textLayer.html
@@ -200,7 +200,7 @@
           </form>
           <hr>
           <form name="form_textConfig" oninput="textlayer.textConfig.assignFrom(Wc.HtmlUtil.formToObject(this));textlayer.draw();" onchange="this.oninput(event);">
-            <div class="grid-auto-fit-260px gap-3">
+            <div class="grid-minmax-260px gap-3">
               <div>
                 <div class="form-label mb-0"><i class="bi bi-palette"></i> Color</div>
                 <div class="input-group">
